# ros-weed-control

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  dependencies.repos  ofa_robot.urdf  setup  stuff.txt
.devcontainer/: Dockerfile  devcontainer.json
.motor_params/cubemars/: README.md
.motor_params/teknic/: README.md  axis.mtr
.params/: README.md
arduino/: README.md
arduino/led_serial/: led_serial.ino
cubemars_ak_controller/: CMakeLists.txt  README.md  package.xml
cubemars_ak_controller/src/: cubemars_interface.cpp
cubemars_hardware/: CMakeLists.txt  README.md  cubemars_hardware.xml
cubemars_hardware/include/cubemars_hardware/: can.hpp  can_interface.hpp  can_socket.hpp  socket_can.hpp  system.hpp
cubemars_hardware/src/: can.cpp  can_interface.cpp  can_socket.cpp  socket_can.cpp  system.cpp
cubemars_params/: README.md
cubemars_ros2_control/: CMakeLists.txt  README.md  cubemars_ros2_control.xml  package.xml
cubemars_ros2_control/include/cubemars_ak_controller/: cubemars_hardware_interface.hpp  visibility_control.h
cubemars_ros2_control/include/cubemars_ros2_control/: cubemars_system.hpp
cubemars_ros2_control/src/: cubemars_hardware_interface.cpp  cubemars_system.cpp
ofa_bringup/: CMakeLists.txt  README.md  package.xml
ofa_bringup/config/: forward_position_publisher.yaml  joint_trajectory_publisher.yaml  parameters.yaml  robot_controllers.yaml  weed_parameters.yaml
ofa_bringup/launch/: display.launch.py  main.launch.py  moveit.launch.py  read_only.launch.py  robot.launch.py  ros2_control.launch.py  test_forward_position_controller.launch.py  test_joint_trajectory.launch.py  test_position.launch.py
ofa_description/: CMakeLists.txt  package.xml
ofa_description/launch/: display.launch.py  display1.launch.py  display2.launch.py  display3.launch.py
ofa_description/ros2_control/: 2dof_arm.ros2_control.xacro  arm_2dof.ros2_control.xacro  linear_axis.ros2_control.xacro
ofa_description/rviz/: urdf.rviz
ofa_description/urdf/: inertia.urdf.xacro  ofa_robot.urdf  ofa_robot.urdf.xacro  ofa_robot_description.urdf.xacro  robot.urdf.xacro  robot_description.urdf.xacro  test.urdf
ofa_detection/: package.xml  setup.cfg  setup.py
ofa_detection/ofa_detection/: cluster_and_classify.py  cluster_classify.py  depth_image.py  pc.py  project.py
ofa_ikfast_plugin/: CMakeLists.txt  README.md  ofa_moveit_ikfast_plugin_description.xml  ofa_robot_arm_moveit_ikfast_plugin_description.xml  ofa_robot_moveit_ikfast_plugin_description.xml  package.xml  update_ikfast_plugin.sh
ofa_ikfast_plugin/scripts/: auto_create_ikfast.sh  auto_update_ikfast.sh  create_ikfast_plugin.py  create_ikfast_solver.sh  update_ikfast.py
ofa_ikfast_plugin/src/: ofa_ikfast_moveit_plugin.cpp  ofa_ikfast_solver.cpp  ofa_robot_arm_ikfast_moveit_plugin.cpp  ofa_robot_arm_ikfast_solver.cpp  ofa_robot_ikfast_moveit_plugin.cpp  ofa_robot_ikfast_solver.cpp
ofa_ikfast_plugin/templates/: ikfast_moveit_plugin_template.cpp
ofa_interfaces/: CMakeLists.txt  package.xml
ofa_interfaces/action/: ClusterClassify.action  WeedControl.action
ofa_main/: CMakeLists.txt  package.xml
ofa_main/lib/arm64/: libk4a.so.1.4.1
ofa_main/rviz/: main.rviz
ofa_main/src/: process_image.cpp  weed_control.cpp
ofa_moveit_config/: .setup_assistant  CMakeLists.txt  README.md  package.xml
ofa_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  ofa_arm.srdf  ofa_robot.ros2_control.xacro  ofa_robot.srdf  ofa_robot.urdf.xacro  ofa_robot_description.urdf.xacro  ros2_controllers.yaml  ros2_controllers_read.yaml  ros2_controllers_read_only.yaml  sensors_3d.yaml  weed_arm.ros2_control.xacro  weed_arm.srdf  weed_arm.urdf.xacro
ofa_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
ofa_moveit_config/ros2_control/: ofa_robot.ros2_control.xacro
ofa_moveit_config/urdf/: materials.urdf.xacro  ofa_robot_description.urdf.xacro
ofa_visualization/: CMakeLists.txt  package.xml
ofa_visualization/launch/: display.launch.py  display1.launch.py  display2.launch.py  display3.launch.py
ofa_visualization/urdf/: robot.urdf.xacro  robot2.urdf.xacro  robot_description.urdf.xacro  test.urdf
ofa_visualization/urdf/ros2_control/: 2dof_arm.ros2_control.xacro
ofa_weed_control/: CMakeLists.txt  README.md  package.xml
ofa_weed_control/config/: positions.yaml
ofa_weed_control/launch/: interface.launch.py  main.launch.py  moveit.launch.py  read_only.launch.py  read_only.py
ofa_weed_control/src/: arm_moveit.cpp  tf2_test.cpp
ofa_weed_detection/: .gitignore  CMakeLists.txt  package.xml
ofa_weed_detection/config/: camera.yaml  launch_params.yaml  parameters.yaml
ofa_weed_detection/launch/: camera.launch.py  main.launch.py
ofa_weed_detection/lib/: libk4a.so.1.4  libk4a.so.1.4.1
ofa_weed_detection/lib/x64/: libk4a.so.1.4.1
ofa_weed_detection/src/: process_image.cpp  weed_control.cpp  weed_detection.cpp
onnx_test/: package.xml  setup.cfg  setup.py
onnx_test/onnx_test/: classify.py  depth_image.py  gauss.py  ir_test.py  pc.py  project.py
teknic_hardware/: .gitignore  CMakeLists.txt  README.md
teknic_hardware/driver/jetpack_6.0/: xr_usb_serial_common.ko
teknic_hardware/include/teknic_hardware/: system.hpp
teknic_hardware/src/: disable.cpp  system.cpp
test/: .setup_assistant  package.xml
test/config/: initial_positions.yaml  joint_limits.yaml  ofa_robot.ros2_control.xacro  ofa_robot.srdf  ofa_robot.urdf.xacro
test/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
