<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ofa_bringup</name>
  <version>0.0.1</version>
  <description>OFA launch files</description>
  <maintainer email="j.haldemann@proton.me">ros</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>urdf_launch</exec_depend>
  <exec_depend>ofa_moveit_config</exec_depend>
  <exec_depend>ofa_interfaces</exec_depend>
  <exec_depend>ofa_main</exec_depend>
  <exec_depend>cubemars_hardware</exec_depend>
  <exec_depend>teknic_hardware</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
