<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ofa_detection</name>
  <version>0.0.1</version>
  <description>OFA weed detection and classification</description>
  <maintainer email="j.haldemann@proton.me">Jan-Marco Haldemann</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>ofa_interfaces</exec_depend>
  <exec_depend>python3-open3d</exec_depend>
  <exec_depend>python3-sklearn</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
