<?xml version='1.0' encoding='UTF-8'?>
<package format="2">
  <name>ofa_ikfast_plugin</name>
  <version>0.0.1</version>
  <description>IKFast plugin for ofa_robot</description>
  <license>Apache-2.0</license>
  <maintainer email="j.haldemann@proton.me">Jan-Marco Haldemann</maintainer>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <export>
    <build_type>ament_cmake</build_type>
    <moveit_core plugin="${prefix}/ofa_robot_arm_moveit_ikfast_plugin_description.xml"/>
  </export>
  <build_depend>tf2_kdl</build_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>tf2_eigen</build_depend>
  <build_depend>liblapack-dev</build_depend>
  <build_depend>moveit_core</build_depend>
  <exec_depend>liblapack-dev</exec_depend>
  <exec_depend>moveit_core</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>pluginlib</exec_depend>
</package>
